@@ -5,8 +5,8 @@ if [ ! -d src ]; then
   exit 1
 fi
 
-
 for D in \
+  man \
   src \
   src/base \
   src/base/tests \
@@ -30,9 +30,6 @@ done
 
 rm -rf autom4te.cache
 rm -rf coverage-report 
-rm -rf osx-build
-rm -rf rpm-build
-rm -rf dmg-build
 
 find . -maxdepth 1 -type f -name \*.m4 ! -name boost.m4 | xargs rm -f
 
@@ -46,4 +43,3 @@ rm -f *.tar.gz
 rm -f libtool
 rm -f ltmain.sh
 rm -f *.info
-rm -f *.dmg
