@@ -1,0 +1,46 @@
+#!/bin/bash
+
+_CONF=$1
+
+if [ ! -f "$_CONF" ]; then
+  echo "can't find config file [$_CONF]."
+  exit 1
+fi
+
+echo '.\" man page for s3fuse'
+echo '.\" generated by s3fuse.conf.5.in'
+
+echo '.TH S3FUSE.CONF 5 2013-01-26 "s3fuse 0.13" "s3fuse Configuration File"'
+
+echo '.SH NAME'
+echo '\fBs3fuse.conf\fR - Configuration file for s3fuse'
+
+echo '.SH FILES'
+echo '\fBs3fuse\fR(1) loads a configuration file on initialization. It tries'
+echo 'the following paths, in order:'
+echo '.IP \[bu] 2'
+echo '.B "~/.s3fuse/s3fuse.conf"'
+echo ''
+echo '.IP \[bu]'
+echo '.B "/etc/s3fuse.conf"'
+
+echo '.SH SYNTAX'
+echo 'The configuration file contains a list of parameters, one per line, in'
+echo 'the format \fIparameter_name\fR=\fIparameter_value\fR. Lines beginning'
+echo 'with a # are ignored.'
+
+echo '.SH REQUIRED PARAMETERS'
+
+grep '^CONFIG_REQUIRED(.*);$' $_CONF | \
+  sed -e 's/^CONFIG_REQUIRED(//' -e 's/);$//' -e 's/, /%%%%/g' -e 's/"//g' | \
+  awk -F '%%%%' '{ print ".TP\n.B " $2 "\n" $4 "\n" }'
+
+echo '.SH OPTIONAL PARAMETERS'
+
+grep '^CONFIG(.*);$' $_CONF | \
+  sed -e 's/^CONFIG(//' -e 's/);$//' -e 's/, /%%%%/g' -e 's/"//g' | \
+  awk -F '%%%%' '{ print ".TP\n.B " $2 "\n" $4 "\n" }'
+
+echo '.SH SEE ALSO'
+echo '\fBs3fuse\fR(1), \fBs3fuse_gen_key\fR(1), \fBs3fuse_gs_get_token\fR(1),'
+echo '\fBs3fuse_sha256_sum\fR(1)'
